--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "4     g791     Ramicane    Male          11          16"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "4     c819          0                45.0                 0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "249"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "917           54.657650                 1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "[1888 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
        "249"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1075,7 +1075,7 @@
        "Zoniferol                    6.966589                0.516398  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
        "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
        "Text(0, 0.5, 'Number of Unique Mice Tested')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "<AxesSubplot:ylabel='Sex'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1388,11 +1388,11 @@
    "source": [
     "# Generate a pie plot showing the distribution of female versus male mice using pyplot\n",
     "Gender = new_mouse_study_df.groupby(\"Sex\")\n",
-    "labels = [\"Female\", \"Male\"]\n",
-    "Gender_count = Drug[\"Drug Regimen\"].count()\n",
+    "#labels = [\"Female\", \"Male\"]\n",
+    "Gender_count = Gender[\"Drug Regimen\"].count()\n",
     "#Gender_count\n",
     "\n",
-    "plt.pie(Gender_count, labels = labels, autopct = '%1.1f%%')\n",
+    "plt.pie(Gender_count, labels=labels, autopct='%1.1f%%')\n",
     "plt.axis(\"equal\")\n",
     "plt.title(\"Male and Female Population of Study\")\n",
     "plt.show()\n"
